--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,33 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.step-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.step-item:not(:first-child):before {
+  position: absolute;
+  content: "";
+  width: 55vh;
+  height: 3px;
+  top: 14%;
+  left: 5%;
+  transform: translateY(-24px);
+  background-color: blue;
+}
+
+.step {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 10;
+  border: 1px solid black;
+  background-color: #fff;
+}
