--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
 .step-item {
   display: flex;
   flex-direction: column;
+  gap: 5px;
   align-items: center;
   justify-content: center;
 }
@@ -28,6 +29,6 @@
   align-items: center;
   justify-content: center;
   z-index: 10;
-  border: 1px solid black;
-  background-color: #fff;
+  border: 1px solid #6c6e70;
+  color: #26475e;
 }
